# schopenhauer

./: .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  deploy.sh  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  test.yml
api/: index.html
claude/: index.html  page-001.html  page-002.html  page-003.html
commands/: index.html
commands/create/: index.html
commands/generate/: index.html
deployment/cloud-run/: index.html
docs/: api.md  index.md  install.md  quickstart.md  rest-api.md  yaml-format.md
docs/commands/: create.md  generate.md  index.md
docs/deployment/: cloud-run.md
examples/: report.yaml  sample.yaml
install/: index.html
quickstart/: index.html
rest-api/: index.html
search/: search_index.json
src/will/: __init__.py  api.py  cli.py  core.py  document.py  styles.py  templates.py
stylesheets/: extra.css
tests/: __init__.py  test_cli.py  test_core.py  test_templates.py
website/: index.html
yaml-format/: index.html
