[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schopenhauer"
version = "0.1.0"
description = "A powerful CLI tool for generating Word documents from YAML/JSON specifications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Yann Debray", email = "debray.yann@gmail.com"}
]
keywords = [
    "docx",
    "word",
    "document",
    "generator",
    "cli",
    "automation",
    "yaml",
    "templates",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "python-docx>=1.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]
all = [
    "schopenhauer[dev,docs,api]",
]

[project.scripts]
will = "will.cli:main"

[project.urls]
Homepage = "https://github.com/yanndebray/schopenhauer"
Documentation = "https://yanndebray.github.io/schopenhauer"
Repository = "https://github.com/yanndebray/schopenhauer"
Issues = "https://github.com/yanndebray/schopenhauer/issues"
Changelog = "https://github.com/yanndebray/schopenhauer/blob/main/CHANGELOG.md"
[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/will"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=will --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
